<?xml version="1.0"?>
<package>
  <name>eigen_catkin_info</name>
  <version>0.0.1</version> 
  <description>This is to test eigen_catkin from the client side.
  Additionally it contains the executable eigen_catkin_info that provides information about where and which Eigen was found by eigen_catkin when executed.</description>
  <maintainer email="sommerh@ethz.ch">Hannes Sommer</maintainer>
  <author>ASL</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>eigen_catkin</build_depend>
</package>
